# home-property-tax

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/hcad_etl/: config.py  extract.py  load.py  pipeline.py  transform.py
wickersham/tax_year_2023/: 2023_analysis.ipynb  get_tax_data.ipynb  zwicker_hcad_protest_analysis.md
wickersham/tax_year_2023/protest_evidence/: 2022_remodels.csv  Zwicker Property Tax Protest_ Tax Year 2023 .xlsx  market_trends.csv  neighborhood_2022_no_remodels.csv  neighborhood_2023.csv
wickersham/tax_year_2023/xrefs/: state_class_xref.sql
